Cropped card correctly

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,6 +66,7 @@ h1{
 	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 	margin-bottom: 18px;
 	color: black;
+	overflow: hidden
 }
 .card a{
 	color: black;
